<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:title="@string/save_text"
    android:icon="@drawable/ic_baseline_save_24"
    android:id="@+id/save"
    app:showAsAction="ifRoom"
    android:visible="false"
    android:enabled="false"
    android:orderInCategory="1"/>
  <item android:title="@string/edit_text"
    android:icon="@drawable/ic_baseline_edit_white_24"
    android:id="@+id/edit_text"
    app:showAsAction="ifRoom"
    android:visible="false"
    android:enabled="false"
    android:orderInCategory="2"/>
  <item android:title="@string/change_passwords"
    android:id="@+id/passwords"
    android:icon="@drawable/ic_baseline_vpn_key_24"
    app:showAsAction="ifRoom"
    android:visible="false"
    android:enabled="false"
    android:orderInCategory="3"/>
  <item android:title="@string/deletion_settings"
    android:id="@+id/deletion"
    android:icon="@drawable/ic_baseline_settings_24"
    android:visible="false"
    android:enabled="false"
    android:orderInCategory="4"
    app:showAsAction="ifRoom" />
  <item android:title="@string/log"
    android:id="@+id/log"
    android:icon="@drawable/ic_baseline_text_snippet_24"
    android:visible="false"
    android:enabled="false"
    app:showAsAction="ifRoom"
    android:orderInCategory="5"/>
  <item android:title="@string/about"
    android:id="@+id/aboutApp"
    android:icon="@drawable/ic_baseline_help_outline_24"
    android:visible="false"
    android:enabled="false"
    app:showAsAction="ifRoom"
    android:orderInCategory="6"/>
</menu>
