<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/start"
        android:id="@+id/start"
        android:icon="@drawable/ic_baseline_play_arrow_24"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>
    <item android:title="@string/change_timeout"
        android:id="@+id/timeout"
        android:icon="@drawable/ic_baseline_timer_24"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />
    <item android:title="@string/clear"
        android:id="@+id/clear"
        android:icon="@drawable/ic_baseline_delete_outline_24_red"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"/>
    <item android:title="@string/help"
        android:id="@+id/help"
        android:icon="@drawable/ic_baseline_help_outline_24"
        app:showAsAction="ifRoom"
        android:orderInCategory="5"/>
</menu>