<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/change_passwords"
        android:id="@+id/passwords"
        android:icon="@drawable/ic_baseline_vpn_key_24"
        app:showAsAction="ifRoom"
        android:enabled="false"
        android:visible="false"
        android:orderInCategory="1"/>
    <item android:title="@string/deletion_settings"
        android:id="@+id/deletion"
        android:icon="@drawable/ic_baseline_settings_24"
        android:orderInCategory="2"
        android:enabled="false"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item android:title="@string/log"
        android:id="@+id/log"
        android:icon="@drawable/ic_baseline_text_snippet_24"
        app:showAsAction="ifRoom"
        android:enabled="false"
        android:visible="false"
        android:orderInCategory="3"/>
    <item android:title="@string/about"
        android:id="@+id/aboutApp"
        android:icon="@drawable/ic_baseline_help_outline_24"
        app:showAsAction="ifRoom"
        android:enabled="false"
        android:visible="false"
        android:orderInCategory="4"/>
</menu>