<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/autodeletionPassword"
      style="@style/LoginTextInputLayoutStyle"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:hintAnimationEnabled="true"
      app:passwordToggleEnabled="true">


      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/autodeletionPasswordInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autodeletionPassword"
        android:inputType="textPassword"
        android:maxLines="1"
        app:textInputLayoutFocusedRectEnabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/autodeletionTimeOut"
      style="@style/LoginTextInputLayoutStyle"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:hintAnimationEnabled="true">


      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/autodeletionTimeOutInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autodeletion_timeout"
        android:inputType="number"
        android:maxLength="5"
        android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
      android:id="@+id/duress"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="?attr/textAppearanceBodyLarge"
      android:text="@string/duress_active_short" />

    <CheckBox
      android:id="@+id/autoDeletion"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="?attr/textAppearanceBodyLarge"
      android:text="@string/autodeletion_active_short" />

    <com.google.android.material.textview.MaterialTextView
      android:id="@+id/info"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:background="@drawable/textfield_background"
      android:hint="@string/info_hint"
      android:paddingStart="8dp"
      android:paddingTop="8dp"
      android:paddingEnd="8dp"
      android:paddingBottom="8dp"
      style="?attr/textAppearanceBodyLarge">

    </com.google.android.material.textview.MaterialTextView>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="end">

      <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel">

      </com.google.android.material.button.MaterialButton>
      <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok">

      </com.google.android.material.button.MaterialButton>
    </LinearLayout>
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
